refactor: reorganiza lógica de agendamento semanal e melhora a verificação de permissões